<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
<TextView 
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/yellow"
    android:text="@string/head"
    android:textStyle="bold"
    android:textSize="30sp"
    android:layout_gravity="center"
    android:textColor="@color/black"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="20dp" >

      <TextView
          android:layout_width="80dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/name" />

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name_hint"
          android:padding="15dp" />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp" >

      <TextView
          android:layout_width="80dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/email"
           />

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email_hint"
          android:padding="15dp"
          android:inputType="textEmailAddress" />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp" 
     >

      <TextView
          android:layout_width="80dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/phone"
         />

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phone_hint"
          android:padding="15dp"
           android:inputType="phone"  />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp" >

      <TextView
          android:layout_width="80dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/date" />

      <EditText
          android:layout_width="213dp"
          android:layout_height="wrap_content"
          android:id="@+id/date_edt"
          android:inputType="date"
          android:hint="@string/date_hint"
          android:padding="15dp" />

      <Button
          android:id="@+id/date_btn"
          android:layout_width="24dp"
          android:layout_height="wrap_content"
          android:background="@drawable/dropdown" />
          
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp" >

      <TextView
          android:layout_width="80dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/time" />

      <EditText
          android:layout_width="213dp"
          android:layout_height="wrap_content"
          android:id="@+id/time_edt"
          android:inputType="time"
          android:hint="@string/time_hint"
          android:padding="15dp" />
       <Button
          android:id="@+id/time_btn"
          android:layout_width="24dp"
          android:layout_height="wrap_content"
          android:background="@drawable/dropdown" />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp" >

      <TextView
          android:layout_width="80dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/purpose" />

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/purpose_hint"
          android:padding="15dp" />
  </LinearLayout>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="15dp" >

      <TextView
          android:layout_width="90dp"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_height="wrap_content"
          android:text="@string/Message" />

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/Message"
          android:padding="15dp" />
  </LinearLayout>
 
  <Button
      android:id="@+id/submit_btn"
       android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      android:background="@color/yellow"
      android:layout_gravity="center"
      android:textColor="@color/black"/>

</LinearLayout>
</ScrollView>