<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/add_txt"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/name_txt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_txt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_edt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/email_txt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@color/pink"
        android:text="@string/add_txt"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>